Strategy - en JavaScript - caso práctico

--- a/strategy/js/index.html
+++ b/strategy/js/index.html
@@ -6,11 +6,25 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <title>Strategy</title>
-  <script src='strategy.js'></script>
 </head>
 
 <body>
 
+  <div>
+
+    <h1>Lista de proyectos:</h1>
+
+    <select id="slcOptions">
+      <option value="0">All</option>
+      <option value="1">With details</option>
+    </select>
+  </div>
+
+  <div id="content">
+
+  </div>
+
+  <script src='strategy.js'></script>
 </body>
 
 </html>
