--- a/observer/js/index.html
+++ b/observer/js/index.html
@@ -6,11 +6,16 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <title>Observer</title>
-  <script src='observer.js'></script>
 </head>
 
 <body>
 
+  <input type='text' id='myText' oninput='change()'>
+
+  <div id='div1'></div>
+  <div id='div2'></div>
+
+  <script src='observer.js'></script>
 </body>
 
 </html>
