--- a/builder/js/forms.html
+++ b/builder/js/forms.html
@@ -13,6 +13,13 @@
   <div id="form1"></div>
   <hr>
   <div id="form2"></div>
+  <hr>
+  <h1>Usado la clase "Director"</h1>
+  <div id="form3"></div>
+  <hr>
+  <div id="form4"></div>
+  <hr>
+  <div id="form5"></div>
 
   <script src="forms.js"></script>
 </body>
